2007-11-14  Werner Koch  <wk@g10code.com>

	* assuan.texi (Client code): Describe the new flag bit 7 of the
	pipe_server_connect_ext function.

2007-10-18  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.texi (Client requests): Document HELP.

2007-09-07  Moritz Schulte  <moritz@g10code.com>

	* assuan.texi (Client code): mention assuan_send_data() instead of
	assuan_write_data().

2007-09-03  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.texi: Fix prototype and documentation for
	assuan_inquire_ext.

2007-08-24  Werner Koch  <wk@g10code.com>

	* lgpl.texi: Replace by LGPLv2.1 version.

2007-08-09  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.texi (External I/O Loop): New chapter.

2007-07-12  Werner Koch  <wk@g10code.com>

	* assuan.texi (Utilities): Document that under W32 we return a
	system handle.

2007-07-05  Werner Koch  <wk@g10code.com>

	* lgpl.texi: New.  Taken from COPYING.LIB and reformatted. 
	* gpl.texi: Updated to v3.

	* assuan.texi (Utilities): Explain ASSUAN_CONFIDENTIAL.

2007-05-06  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.texi: Clean up typos.

2006-10-31  Werner Koch  <wk@g10code.com>

	* assuan.texi: Finished.

2003-12-18  Werner Koch  <wk@gnupg.org>

	* assuan.texi: Changed copyright to GPL because this is not a book
	but useful documentation in other software too.  Reworked
	sectioning, updated list of error codes.
	* gpl.texi: Added.
	* fdl.texi: Removed.

2003-08-06  Werner Koch  <wk@gnupg.org>

	* lgpl.texi: New.
	* gpl.texi: Removed.
	* assuan.texi: Dropped requirement vor invariant sections,
	front- and back-cover texts.  Include lgpg.texi.

2003-02-18  Neal H. Walfield  <neal@cs.uml.edu>

	* Makefile.am: New file.
	* fdl.texi: New file.
	* gpl.texi: New file.
	* assuan.texi: Imported from newpg.


 Copyright 2003, 2006, 2007 Free Software Foundation, Inc.

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without