@@ -1,3 +1,10 @@
+2008-10-29  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan.h (assuan_error_t) (_ASSUAN_ONLY_GPG_ERRORS): Make
+	unsigned int.
+	(assuan_transact): Change return type of callback handlers to
+	assuan_error_t.
+
 2008-10-15  Werner Koch  <wk@g10code.com>
 
 	* assuan-logging.c (_assuan_log_printf): Flush if the format
